[package]
name = "multipart_async_stream"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An easy-to-use, efficient, and asynchronous multipart stream parser."
repository = "https://github.com/OpenTritium/multipart_stream"
readme = "README.md"
keywords = ["multipart", "stream", "async", "parser", "http"]
categories = [
    "network-programming",
    "parser-implementations",
    "web-programming",
]

[dependencies]
async-iterator = "2.3.0"
bytes = "1.10.1"
constcat = "0.6.1"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
http = "1.3.1"
httparse = "1.10.1"
memchr = "2.7.5"
thiserror = "2.0.16"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["stream"] }
tokio = { version = "1.47.1", features = ["full"] }
