[package]
name = "multipart_async_stream"
version = "0.2.5"
edition = "2024"
description = "An easy-to-use, efficient, and asynchronous multipart stream parser."
readme = "README.md"
repository = "https://github.com/OpenTritium/multipart_stream"
license = "MIT OR Apache-2.0"
keywords = ["async", "http", "multipart", "parser", "stream"]
categories = [
  "network-programming",
  "parser-implementations",
  "web-programming",
]

[[bench]]
harness = false
name = "benchmark"

[dependencies]
async-iterator = "2.3.0"
bytes = "1.11.0"
futures-util = { version = "0.3.31", default-features = false }
http = "1.4.0"
httparse = "1.10.1"
memchr = "2.7.6"
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_futures", "html_reports"] }
multipart-rs = "0.2.1"
reqwest = { version = "0.13.1", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1
