[package]
name = "multipart_stream-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1.47.1", features = ["full"] }
bytes = "1.10.1"
futures-util = { version = "0.3.31", features = ["tokio-io"] }

[dependencies.multipart_async_stream]
path = ".."

[[bin]]
name = "parse_stream"
path = "fuzz_targets/parse_stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_random"
path = "fuzz_targets/parse_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_headers_only"
path = "fuzz_targets/parse_headers_only.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_boundary_edge_cases"
path = "fuzz_targets/parse_boundary_edge_cases.rs"
test = false
doc = false
bench = false
